objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Building_UUID__c</fullName>
        <description>This is populated from the payload of product in contract event</description>
        <externalId>true</externalId>
        <label>Building_UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is filled from contract event in the pay of products.</description>
        <inlineHelpText>Enter the relevant building. If 'Geography' was selected previously, the nearest building will appear.</inlineHelpText>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Desired_Term_Length__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Represents the desired term length of product in months. Used for Issue No: ST-3073</description>
        <inlineHelpText>Represents the desired term length of product in months.</inlineHelpText>
        <label>Commitment Term (in months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>WeWork Off the Shelf Office</fullName>
                </value>
                <value>
                    <fullName>WeWork Customized Office</fullName>
                </value>
                <value>
                    <fullName>Envision</fullName>
                </value>
                <value>
                    <fullName>Design/Build</fullName>
                </value>
                <value>
                    <fullName>Operate</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>WeWork</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Global Access</fullName>
                </value>
                <value>
                    <fullName>PxWe</fullName>
                </value>
                <value>
                    <fullName>Enterprise Solutions</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>Standard Product</fullName>
                </value>
                <value>
                    <fullName>Powered by We</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter a relevant geographical location no building can be specified.</inlineHelpText>
        <label>Geography</label>
        <referenceTo>Geography__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Primary_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field is used to identify primary product on opportunity.</description>
        <label>Is Primary Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>ProductCode</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PxWe</fullName>
                </value>
                <value>
                    <fullName>Global Access</fullName>
                </value>
                <value>
                    <fullName>Hot Desk</fullName>
                </value>
                <value>
                    <fullName>WeMembership</fullName>
                </value>
                <value>
                    <fullName>Dedicated Desk</fullName>
                </value>
                <value>
                    <fullName>Standard Office</fullName>
                </value>
                <value>
                    <fullName>Custom Office</fullName>
                </value>
                <value>
                    <fullName>Large Office(WWLO)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>PricebookEntry.Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuantityUnitOfMeasure__c</fullName>
        <label>Quantity Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Memberships/Month</fullName>
                </value>
                <value>
                    <fullName>Desks/Month</fullName>
                </value>
                <value>
                    <fullName>Lump Sum</fullName>
                </value>
                <value>
                    <fullName>Sqft</fullName>
                </value>
                <value>
                    <fullName>Users/Month</fullName>
                </value>
                <value>
                    <fullName>Utilization</fullName>
                </value>
                <value>
                    <fullName>Per Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sq_Feet__c</fullName>
        <label>Sq Feet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This is filled from contract event payload in product for sellable feature</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>This field will show the product price value, implemented for manage product ST-3011</description>
        <formula>Quantity *  UnitPrice  * Desired_Term_Length__c</formula>
        <inlineHelpText>This field will show the product total price value i.e. Quantity  * Desired Term Length * Sales Price</inlineHelpText>
        <label>Gross Product Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Filter_Archived_Reservables</fullName>
        <active>false</active>
        <description>When searching for reservables that were deleted or archived, this validation rule ensures that CMs can only select available reservables</description>
        <errorConditionFormula>Product2.IsArchived</errorConditionFormula>
        <errorDisplayField>Product2Id</errorDisplayField>
        <errorMessage>This reservable is archived. Please try again.</errorMessage>
    </validationRules>
</CustomObject>